Accounts has been added in Swagger
