# routes/accounts.js
@@ -4,6 +4,6 @@ const accounts = require("../controllers/accounts");
 
 router.get("/", accounts.getAllAccounts);
 router.get("/accounts-by-customer/:id", accounts.getAccountsByCustomer);
-router.get("/balance-by-account/:account_number", accounts.getBalanceByAccount);
+// router.get("/balance-by-account/:account_number", accounts.getBalanceByAccount);
 
 module.exports = router;
